<resources>
    <string name="app_name">CryptObserve</string>
    <string name="info">Info</string>
    <string name="app_info_message">Data from https://www.cryptocompare.com/</string>
    <string name="algorithm">Algorithm: %s</string>
    <string name="proof_type">Proof Type: %s</string>
    <string name="q_remove_x_from_fav">Do you want to remove %s from the list?</string>
    <string name="unable_to_load_screen">Unable to load screen, missing data</string>
    <string name="time">Time:</string>
    <string name="aggregation">Aggregation:</string>
    <string name="open">Open:</string>
    <string name="close">Close:</string>
    <string name="low">Low:</string>
    <string name="high">High:</string>
    <string name="one_year">1Y</string>
    <string name="one_month">1M</string>
    <string name="one_week">1W</string>
    <string name="one_day">1D</string>
    <string name="one_hour">1H</string>
    <string name="aggregation_1_min">1 min</string>
    <string name="aggregation_5_min">5 min</string>
    <string name="aggregation_1_hr">1 hour</string>
    <string name="aggregation_1_day">1 day</string>
    <string name="empty_list">There are no coins in the list at the moment.\nAdd some with the + button.</string>
    <string name="filter">Filter</string>
    <string name="no_coins_available">No coins available. Check your internet connection or change the filter.</string>
    <string name="loading_data">Loading data...</string>
</resources>
